# looks-like-native-en-speaker

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.vue  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: ResultCard.vue
